--- a/indx.html
+++ b/indx.html
@@ -14,8 +14,7 @@
         <h1>Congratulations!</h1>
 
         <p class="lead">You have successfully created your Yii-powered application.ffffffffffffffffffffffffffffffffffffffff</p>
-
-        <p><a class="btn btn-lg btn-success" href="http://www.yiiframework.com">Get started with Yii</a></p>
+        <div>test test test</div>
     </div>
 
     <div class="body-content">
